--- a/ClientApp/app/components/search/search.component.css
+++ b/ClientApp/app/components/search/search.component.css
@@ -23,3 +23,20 @@
     margin-right: 5px;
     font-size: 14px;
 }
+.demo-img-container {
+    display: inline-block;
+    position: relative;
+    max-height: 100%;
+    max-width: 100%;
+}
+.face-rectangle {
+    position: absolute;
+    border: solid 3px;
+    z-index: 99;
+}
+.face-rectangle-m {
+    border-color: #0078d7;
+}
+.face-rectangle-f {
+    border-color: #ba0b93;
+}
