--- a/ClientApp/app/components/search/search.component.html
+++ b/ClientApp/app/components/search/search.component.html
@@ -17,7 +17,7 @@
         <div class="image-container">
             <img src="{{currentItem?.thumbnailUrl}}" />
             <div *ngFor="let face of currentAnalytics?.faces" class="face-rectangle" [ngClass]="face.gender == 'Male' ? 'face-rectangle-m' : 'face-rectangle-f'"
-                [ngStyle]="{ top: (face.top / currentAnalytics.height) + '%', left: (face.left / currentAnalytics.width) + '%', width: face.width + 'px', height: face.height + 'px' }">
+                [ngStyle]="{ 'top': (face.faceRectangle.top / currentAnalytics.metadata.height * 100) + '%', 'left': (face.faceRectangle.left / currentAnalytics.metadata.width * 100) + '%', 'width': face.faceRectangle.width + 'px', 'height': face.faceRectangle.height + 'px' }">
                 <table class="table-naked face-info">
                     <tbody>
                         <tr>
