Display logged user (not working, need to define ORIGIN_URL)

--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<h2>Hello</h2>
+<h1>Hello, {{user?.firstName}} {{user?.lastName}}!</h1>
 <p>Welcome to this Azure Toolkit training page. </p>
 <p>This site will demonstrate several Azure services, based on EDX course "Building your Azure Toolkit".</p>
 
